Add map changer.

--- a/airmap/res.qrc
+++ b/airmap/res.qrc
@@ -24,5 +24,6 @@
         <file>resource/maps/square_0_2d_F2s.json</file>
         <file>resource/maps/square_0_2d_B1s.json</file>
         <file>resource/maps/square_0_2d_F1s.json</file>
+        <file>resource/point.png</file>
     </qresource>
 </RCC>
