--- a/airmap/res.qrc
+++ b/airmap/res.qrc
@@ -25,5 +25,7 @@
         <file>resource/maps/square_0_2d_B1s.json</file>
         <file>resource/maps/square_0_2d_F1s.json</file>
         <file>resource/point.png</file>
+        <file>resource/indicator.png</file>
+        <file>resource/indicator2.png</file>
     </qresource>
 </RCC>
